# flood-os-detector

./: .gitignore  LICENSE  README.md  analyze.py  check_lmdb.py  main.py  models.py  p0f_signatures.py  pyproject.toml  requirements.txt
docs/: PRD.md  detection_logic.md  json-style-definition.md
docs/api/: api-spec.md
docs/architecture/: analysis-modules.md  analysis-pipeline.md  component-spec.md  fingerprint-data-pattern.md  shell-integration.md
docs/development/: guidelines.md
src/: check_lmdb.py  dump_json.py  main.py
src/analysis/: oui_analysis.py
src/tests/: test_p0f.py  test_pyp0f.py  test_vlan_pcapy.py
