[project]
name = "flood-os-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chardet>=5.2.0",
    "dpkt>=1.9.8",
    "psutil>=7.0.0",
    "pyshark>=0.6",
    "python-libpcap>=0.5.2",
    "lmdb>=1.6.2",
    "scapy>=2.6.1",
    "msgspec>=0.19.0",
    "libpcapy>=0.2.0",
    "argparse>=1.4.0",
    "cbor2>=5.6.5",
    "lz4>=4.4.4",
    "ijson>=3.4.0",
    "pyp0f>=0.3.0",
]
